--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,9 @@ dependencies {
     def lifecycle_version = "2.5.0-alpha03"
     def fragment_version = '1.4.1'
     def nav_version = '2.4.1'
+    def core_version = '1.6.0'
 
+    implementation "androidx.core:core:$core_version"
     implementation "com.google.android.gms:play-services-location:19.0.1"
     implementation "androidx.fragment:fragment:$fragment_version"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
